added more and precise documentation for project and fixed remaining bugs in gui